syntax = "proto3";

package proto.payment.v1;

option go_package = "grpc/payment/v1";

service PaymentService {
  rpc Pay(PayRequest) returns (PayResponse);
}

message PayRequest {
  int64 amount = 1;
}

message PayResponse {
  string result = 1;
}
